# inchipy

./: CMakeLists.txt  README.md  build.sh  meta.yaml
.circleci/: config.yml
src/: inchipy.cc
tests/: test__inchipy.py
